<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.TimeChooser"
    android:background="@color/backgroundColor">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/time_description"
            android:layout_centerHorizontal="true"
            android:text="@string/time_description"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_margin="@dimen/title_margin" />

        <TextView
            android:id="@+id/app_selector"
            android:layout_centerHorizontal="true"
            android:text="@string/time_selector"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_margin="@dimen/title_margin" />


        <Spinner
            android:id="@+id/spinner_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/title_margin" />


        <Button
            android:id="@+id/time_selected_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_time"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:background="@drawable/button_rounded"
            android:padding="@dimen/title_margin"
            android:onClick="onClickTimeSelectionSet"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/title_margin"/>


    </LinearLayout>

    </FrameLayout>